[package]
name = "code16-4"
version = "0.1.0"
authors = ["Fumihito TSUJIKAWA <readme627@gmail.com>"]
edition = "2018"
links = "hello"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"

[build-dependencies]
cc = "1.0"